--- a/Module_5_DID/Slides_DID.tex
+++ b/Module_5_DID/Slides_DID.tex
@@ -759,34 +759,38 @@ Two main types of graphs
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Simulation: With leads and Lags}
+\begin{frame}[fragile]{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags}{}
 \tiny
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\CommentTok{\#simulating the data}
 \KeywordTok{set.seed}\NormalTok{(}\DecValTok{1999}\NormalTok{)}
 \NormalTok{scoresbase\textless{}{-}}\KeywordTok{as.data.frame}\NormalTok{(}\KeywordTok{rep}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{3}\NormalTok{,}\DecValTok{4}\NormalTok{,}\DecValTok{5}\NormalTok{,}\DecValTok{6}\NormalTok{,}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{),}\DataTypeTok{times=}\DecValTok{30}\NormalTok{))}
 \KeywordTok{names}\NormalTok{(scoresbase)\textless{}{-}}\KeywordTok{c}\NormalTok{(}\StringTok{"class"}\NormalTok{)}
 \NormalTok{scoresbase \textless{}{-}}\StringTok{ }\NormalTok{fastDummies}\OperatorTok{::}\KeywordTok{dummy\_cols}\NormalTok{(scoresbase, }\DataTypeTok{select\_columns =} \StringTok{"class"}\NormalTok{)}
 
-\CommentTok{\#suppose teachers in the better performing classes (classes, 7,8,9,10) select to participate in the book club program}
+\CommentTok{\#suppose the better teachers (classes, 7,8,9,10)}
+\CommentTok{\#select to participate in the book club program}
 \NormalTok{scoresbase}\OperatorTok{$}\NormalTok{treat\textless{}{-}}\DecValTok{0}
 \NormalTok{scoresbase}\OperatorTok{$}\NormalTok{treat[scoresbase}\OperatorTok{$}\NormalTok{class}\OperatorTok{\%in\%}\KeywordTok{c}\NormalTok{(}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{)]\textless{}{-}}\DecValTok{1}
 \end{Highlighting}
 \end{Shaded}
 \end{frame}
 
-\begin{frame}[fragile]{Simulation: With leads and Lags}
+\begin{frame}[fragile]{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags-1}{}
 \tiny
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\CommentTok{\#Gnerating simulated data for each year using a for loop}
 \NormalTok{yr\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{1995}\NormalTok{,}\DecValTok{1996}\NormalTok{,}\DecValTok{1997}\NormalTok{,}\DecValTok{1998}\NormalTok{,}\DecValTok{1999}\NormalTok{,}\DecValTok{2000}\NormalTok{,}\DecValTok{2001}\NormalTok{,}\DecValTok{2002}\NormalTok{,}\DecValTok{2003}\NormalTok{,}\DecValTok{2004}\NormalTok{,}\DecValTok{2005}\NormalTok{)}
 \NormalTok{tauyr\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{)}
 \NormalTok{yrfe\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{72}\NormalTok{,}\DecValTok{77}\NormalTok{,}\DecValTok{75}\NormalTok{,}\DecValTok{79}\NormalTok{,}\DecValTok{81}\NormalTok{,}\DecValTok{79}\NormalTok{,}\DecValTok{83}\NormalTok{,}\DecValTok{77}\NormalTok{,}\DecValTok{82}\NormalTok{,}\DecValTok{84}\NormalTok{,}\DecValTok{81}\NormalTok{)}
 
+\CommentTok{\#loop to generate the data}
 \ControlFlowTok{for}\NormalTok{(i }\ControlFlowTok{in} \DecValTok{1}\OperatorTok{:}\DecValTok{11}\NormalTok{)\{}
 \NormalTok{  name\textless{}{-}}\KeywordTok{paste}\NormalTok{(}\StringTok{"scores"}\NormalTok{, yr[i], }\DataTypeTok{sep=}\StringTok{"\_"}\NormalTok{)}
 \NormalTok{  scores\textless{}{-}scoresbase}
@@ -811,7 +815,7 @@ Two main types of graphs
 \end{Shaded}
 \end{frame}
 
-\begin{frame}[fragile]{Simulation: With leads and Lags}
+\begin{frame}[fragile]{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags-2}{}
 \tiny
 
@@ -831,7 +835,7 @@ Two main types of graphs
 \end{Shaded}
 \end{frame}
 
-\begin{frame}[fragile]{Simulation: With leads and Lags}
+\begin{frame}[fragile]{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags-3}{}
 \tiny
 
@@ -881,7 +885,7 @@ Two main types of graphs
 \end{table}
 \end{frame}
 
-\begin{frame}[fragile]{Simulation: With leads and Lags}
+\begin{frame}[fragile]{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags-4}{}
 \tiny
 
@@ -913,12 +917,12 @@ Two main types of graphs
 \end{Shaded}
 \end{frame}
 
-\begin{frame}{Simulation: With leads and Lags}
+\begin{frame}{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags-5}{}
-\includegraphics[width=0.7\textwidth,height=\textheight]{"Slides_DID_files/figure-beamer/didplot-1.pdf"}
+\includegraphics{"Slides_DID_files/figure-beamer/didplot-1.pdf"}
 \end{frame}
 
-\begin{frame}[fragile]{Simulation: With leads and Lags}
+\begin{frame}[fragile]{Simulation: With leads and lags}
 \protect\hypertarget{simulation-with-leads-and-lags-6}{}
 \tiny
 
@@ -952,7 +956,507 @@ Two main types of graphs
 
 \begin{frame}{Simulation: With leads and Lags}
 \protect\hypertarget{simulation-with-leads-and-lags-7}{}
-\includegraphics[width=0.7\textwidth,height=\textheight]{"Slides_DID_files/figure-beamer/didplotb-1.pdf"}
+\includegraphics{"Slides_DID_files/figure-beamer/didplotb-1.pdf"}
+\end{frame}
+
+\begin{frame}{A note on Inference: Clustering}
+\protect\hypertarget{a-note-on-inference-clustering}{}
+What if the variable of interest only varies at a ``group'' level
+
+\begin{itemize}
+\item
+  ex: at the state or class level
+\item
+  \(\Rightarrow\) observations are related with each other within
+  certain groups
+\item
+  There is less variation then we actually think
+\end{itemize}
+
+Conventional standard errors will often severely understate the standard
+deviation of the estimators and lead to inference errors.
+
+Solution: cluster standard errors at the group level.
+\end{frame}
+
+\begin{frame}[fragile]{A note on Inference: Clustering}
+\protect\hypertarget{a-note-on-inference-clustering-1}{}
+Clustering standard errors can be done in R using the felm function:
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{regdidall3\textless{}{-}}\KeywordTok{felm}\NormalTok{(read4}\OperatorTok{\textasciitilde{}}\NormalTok{treat}
+                 \OperatorTok{+}\NormalTok{year\_}\DecValTok{1995}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{1996}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{1997}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{1998}\OperatorTok{*}\NormalTok{treat}
+                 \OperatorTok{+}\NormalTok{year\_}\DecValTok{1999}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2001}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2002}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2003}\OperatorTok{*}\NormalTok{treat}
+                 \OperatorTok{+}\NormalTok{year\_}\DecValTok{2004}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2005}\OperatorTok{*}\NormalTok{treat}
+                 \OperatorTok{|}\DecValTok{0}
+                 \OperatorTok{|}\DecValTok{0}
+                 \OperatorTok{|}\NormalTok{class,}
+\NormalTok{                 allscores)}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{A note on Inference: Clustering}
+\protect\hypertarget{a-note-on-inference-clustering-2}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{stargazer}\NormalTok{( regdidall2,regdidall3, }\DataTypeTok{type=}\StringTok{"latex"}\NormalTok{,}\DataTypeTok{no.space=}\OtherTok{TRUE}\NormalTok{, }\DataTypeTok{single.row=}\OtherTok{TRUE}\NormalTok{, }\DataTypeTok{omit.stat =} \StringTok{"all"}\NormalTok{, }\DataTypeTok{header=}\OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{table}[!htbp] \centering 
+  \caption{} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}}lcc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{2}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-3} 
+\\[-1.8ex] & \multicolumn{2}{c}{read4} \\ 
+\\[-1.8ex] & (1) & (2)\\ 
+\hline \\[-1.8ex] 
+ treat & 18.774$^{***}$ (1.207) & 18.774$^{***}$ (2.268) \\ 
+  year\_1995 & $-$5.842$^{***}$ (1.080) & $-$5.842$^{***}$ (0.879) \\ 
+  year\_1996 & $-$2.945$^{***}$ (1.080) & $-$2.945$^{***}$ (1.070) \\ 
+  year\_1997 & $-$1.696 (1.080) & $-$1.696 (1.032) \\ 
+  year\_1998 & 0.027 (1.080) & 0.027 (0.257) \\ 
+  year\_1999 & 2.636$^{**}$ (1.080) & 2.636$^{**}$ (1.237) \\ 
+  year\_2001 & 5.125$^{***}$ (1.080) & 5.125$^{***}$ (0.941) \\ 
+  year\_2002 & $-$2.235$^{**}$ (1.080) & $-$2.235 (1.582) \\ 
+  year\_2003 & 1.849$^{*}$ (1.080) & 1.849$^{***}$ (0.654) \\ 
+  year\_2004 & 4.430$^{***}$ (1.080) & 4.430$^{***}$ (1.206) \\ 
+  year\_2005 & 2.533$^{**}$ (1.080) & 2.533$^{***}$ (0.746) \\ 
+  treat:year\_1995 & 0.431 (1.707) & 0.431 (1.768) \\ 
+  treat:year\_1996 & 1.427 (1.707) & 1.427 (2.108) \\ 
+  treat:year\_1997 & $-$2.476 (1.707) & $-$2.476$^{*}$ (1.287) \\ 
+  treat:year\_1998 & 0.568 (1.707) & 0.568 (1.570) \\ 
+  treat:year\_1999 & $-$0.573 (1.707) & $-$0.573 (1.477) \\ 
+  treat:year\_2001 & 10.204$^{***}$ (1.707) & 10.204$^{***}$ (1.602) \\ 
+  treat:year\_2002 & 12.290$^{***}$ (1.707) & 12.290$^{***}$ (2.310) \\ 
+  treat:year\_2003 & 11.188$^{***}$ (1.707) & 11.188$^{***}$ (1.824) \\ 
+  treat:year\_2004 & 11.186$^{***}$ (1.707) & 11.186$^{***}$ (2.216) \\ 
+  treat:year\_2005 & 10.217$^{***}$ (1.707) & 10.217$^{***}$ (1.510) \\ 
+  Constant & 69.542$^{***}$ (0.764) & 69.542$^{***}$ (1.965) \\ 
+ \hline \\[-1.8ex] 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table}
+\end{frame}
+
+\begin{frame}{Falsification Tests: Alternative outcomes}
+\protect\hypertarget{falsification-tests-alternative-outcomes}{}
+In addition to checking for parallel pre-trends, you can also check and
+see if there is a pattern of parallel trends for an alternative outcome
+measure that should not be affected by treatment.
+
+For the ERS example,
+
+\begin{itemize}
+\item
+  estimate the same model with manslaughter or male murders as the
+  outcome variable.
+\item
+  these variables would be affected by the underlying violent crime in
+  the city, but should be unaffected by ERS.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Falsification Tests: Triple differences}
+\protect\hypertarget{falsification-tests-triple-differences}{}
+Adding another layer of differencing to the estimator (a triple-diff
+estimator) can make DID results more compelling.
+
+In our simulated example:
+
+\begin{itemize}
+\item
+  Suppose a subset of students already had access to the book club
+  through an after school program.
+\item
+  We can use the students in the after school program as an additional
+  ``control'' group, since their performance should not change when the
+  book club is introduced to the classrooms.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Falsification Tests: Triple differences}
+\protect\hypertarget{falsification-tests-triple-differences-1}{}
+Let \(\bar{Y}_{a,g,t}\) represent the mean reading score of students
+
+\begin{itemize}
+\item
+  in group \(g\) (control or treatment classes)
+\item
+  in year \(t\)
+\item
+  that are (\(a=AS\)) or are not (\(a=NAS\)) in the after school
+  program.
+\end{itemize}
+
+The triple difference estimator is then \footnotesize \[
+[(\bar{Y}_{T,1,AS}-\bar{Y}_{T,1,NAS})-(\bar{Y}_{T,0,AS}-\bar{Y}_{T,0,NAS})]-[(\bar{Y}_{C,1, AS}-\bar{Y}_{C,1, NAS})-(\bar{Y}_{C,0,AS}-\bar{Y}_{C,0,NAS})]
+\] \normalsize \(\Rightarrow\) we compare the evolution of the gap
+between the after school kids and the others in the treated classrooms
+to the evolution of the gap between after school kids and the others in
+the control classrooms.
+\end{frame}
+
+\begin{frame}{Falsification Tests: Triple differences}
+\protect\hypertarget{falsification-tests-triple-differences-2}{}
+Triple difference estimation allows us to relax some assumptions:
+
+\begin{itemize}
+\item
+  We no longer need to assume that outcomes for treated and control
+  would evolve similarly in expectation-
+\item
+  we now only need to assume that, to the extent that outcomes evolve
+  differently in treated and control classes, the difference affects
+  participants and non-participants in the after school program
+  similarly.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Triple differences}
+\protect\hypertarget{triple-differences}{}
+Triple diff regressions: Lots of interation terms!
+
+\begin{itemize}
+\item
+  Put in an indicator for every main effect and interaction up to, but
+  not including, the level at which the treatment varies.
+\item
+  We include the main effects for time, class and after-school program
+  participation as well as all possible two way interactions between
+  each of these indicators.
+\end{itemize}
+
+The regression looks like this:
+
+\[
+\begin{aligned}
+Y_{i,a,g,t}=&\alpha_0+\alpha_1 GetT_{g}+\alpha_2 AS_{a}+\alpha_3 Post_{t}\\
+&+\alpha_4 (GetT \times Post)_{gt}+\alpha_5 (GetT \times AS)_{ga}+\alpha_6 (Post \times AS)_{ta}\\
+&+\alpha_7 (GetT \times Post \times AS)_{agt}+u_{igta}
+\end{aligned}
+\]
+\end{frame}
+
+\begin{frame}{Triple differences}
+\protect\hypertarget{triple-differences-1}{}
+Where will we see the treatment effect?
+
+\begin{itemize}
+\item
+  Students who are not in the after school program (\(AS=0\))
+\item
+  When the the treated classes (\(GetT=1\)) adopt the book club
+\item
+  When treatment is implemented\(Post=1\),
+\end{itemize}
+
+\(\Rightarrow\) we would expect the treatment effect to manifest as:
+
+\begin{itemize}
+\item
+  \(\alpha_4>0\)
+\item
+  \(\alpha_4+\alpha_7=0\) (since the after school kids experience no
+  change in the post period).
+\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Triple differences: Simulation}
+\protect\hypertarget{triple-differences-simulation}{}
+I simulate a new set of reading scores that based on a DGP that includes
+the after school program effects.
+
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{set.seed}\NormalTok{(}\DecValTok{123456}\NormalTok{)}
+\NormalTok{scores\textless{}{-}}\KeywordTok{as.data.frame}\NormalTok{(}\KeywordTok{rep}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{3}\NormalTok{,}\DecValTok{4}\NormalTok{,}\DecValTok{5}\NormalTok{,}\DecValTok{6}\NormalTok{,}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{),}\DataTypeTok{times=}\DecValTok{30}\NormalTok{))}
+\KeywordTok{names}\NormalTok{(scores)\textless{}{-}}\KeywordTok{c}\NormalTok{(}\StringTok{"class"}\NormalTok{)}
+\NormalTok{scores \textless{}{-}}\StringTok{ }\NormalTok{fastDummies}\OperatorTok{::}\KeywordTok{dummy\_cols}\NormalTok{(scores, }\DataTypeTok{select\_columns =} \StringTok{"class"}\NormalTok{)}
+
+\NormalTok{scores}\OperatorTok{$}\NormalTok{error\textless{}{-}}\KeywordTok{rnorm}\NormalTok{(}\DecValTok{300}\NormalTok{, }\DataTypeTok{mean=}\DecValTok{0}\NormalTok{, }\DataTypeTok{sd=}\DecValTok{10}\NormalTok{)}
+
+\CommentTok{\#a random indicator for participation in the afterschool program}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{aftsch\textless{}{-}}\KeywordTok{rbinom}\NormalTok{(}\DecValTok{300}\NormalTok{,}\DecValTok{1}\NormalTok{,}\FloatTok{0.5}\NormalTok{)}
+
+\CommentTok{\#suppose the best teachers (classes, 7,8,9,10) }
+\CommentTok{\#select into participating in the book club program}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treat\textless{}{-}}\DecValTok{0}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treat[scores}\OperatorTok{$}\NormalTok{class}\OperatorTok{\%in\%}\KeywordTok{c}\NormalTok{(}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{)]\textless{}{-}}\DecValTok{1}
+
+\CommentTok{\#creating an indicator for students who are become treated}
+\CommentTok{\#and are not in the after school program}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treatnotaftsch\textless{}{-}}\DecValTok{0}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treatnotaftsch[scores}\OperatorTok{$}\NormalTok{treat}\OperatorTok{==}\DecValTok{1} \OperatorTok{\&}\StringTok{ }\NormalTok{scores}\OperatorTok{$}\NormalTok{aftsch}\OperatorTok{==}\DecValTok{0}\NormalTok{]\textless{}{-}}\DecValTok{1}
+
+\CommentTok{\#the treatment effect}
+\NormalTok{tau\textless{}{-}}\DecValTok{10}
+
+\CommentTok{\#the data generating process}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{read4\textless{}{-}(}\DecValTok{85}\OperatorTok{+}\DecValTok{13}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{aftsch}\OperatorTok{+}\NormalTok{tau}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{treatnotaftsch}\OperatorTok{+}\NormalTok{scores}\OperatorTok{$}\NormalTok{error}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{1}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{15}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{2}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{3}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}\OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}\NormalTok{)}
+
+\NormalTok{scores}\OperatorTok{$}\NormalTok{year\textless{}{-}}\StringTok{"2001"}
+
+\NormalTok{scores01\textless{}{-}scores}
+\KeywordTok{rm}\NormalTok{(scores)}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{Triple differences: Simulation}
+\protect\hypertarget{triple-differences-simulation-1}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{scores\textless{}{-}}\KeywordTok{as.data.frame}\NormalTok{(}\KeywordTok{rep}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{3}\NormalTok{,}\DecValTok{4}\NormalTok{,}\DecValTok{5}\NormalTok{,}\DecValTok{6}\NormalTok{,}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{),}\DataTypeTok{times=}\DecValTok{30}\NormalTok{))}
+\KeywordTok{names}\NormalTok{(scores)\textless{}{-}}\KeywordTok{c}\NormalTok{(}\StringTok{"class"}\NormalTok{)}
+\NormalTok{scores \textless{}{-}}\StringTok{ }\NormalTok{fastDummies}\OperatorTok{::}\KeywordTok{dummy\_cols}\NormalTok{(scores, }\DataTypeTok{select\_columns =} \StringTok{"class"}\NormalTok{)}
+
+\NormalTok{scores}\OperatorTok{$}\NormalTok{error\textless{}{-}}\KeywordTok{rnorm}\NormalTok{(}\DecValTok{300}\NormalTok{, }\DataTypeTok{mean=}\DecValTok{0}\NormalTok{, }\DataTypeTok{sd=}\DecValTok{10}\NormalTok{)}
+
+\CommentTok{\#a random indicator for participation in the afterschool program}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{aftsch\textless{}{-}}\KeywordTok{rbinom}\NormalTok{(}\DecValTok{300}\NormalTok{,}\DecValTok{1}\NormalTok{,}\FloatTok{0.5}\NormalTok{)}
+
+\CommentTok{\#suppose the best teachers (classes, 7,8,9,10) }
+\CommentTok{\#select into participating in the book club program}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treat\textless{}{-}}\DecValTok{0}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treat[scores}\OperatorTok{$}\NormalTok{class}\OperatorTok{\%in\%}\KeywordTok{c}\NormalTok{(}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{)]\textless{}{-}}\DecValTok{1}
+
+\CommentTok{\#creating an indicator for students who are become treated}
+\CommentTok{\#and are not in the after school program}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treatnotaftsch\textless{}{-}}\DecValTok{0}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{treatnotaftsch[scores}\OperatorTok{$}\NormalTok{treat}\OperatorTok{==}\DecValTok{1} \OperatorTok{\&}\StringTok{ }\NormalTok{scores}\OperatorTok{$}\NormalTok{aftsch}\OperatorTok{==}\DecValTok{0}\NormalTok{]\textless{}{-}}\DecValTok{1}
+
+\CommentTok{\#the data generating process}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{read4\textless{}{-}(}\DecValTok{78}\OperatorTok{+}\DecValTok{18}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{aftsch}\OperatorTok{+}\NormalTok{scores}\OperatorTok{$}\NormalTok{error}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{1}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{15}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{2}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{3}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}\NormalTok{)}
+
+\NormalTok{scores}\OperatorTok{$}\NormalTok{year\textless{}{-}}\StringTok{"2000"}
+
+\NormalTok{scores00\textless{}{-}scores}
+\KeywordTok{rm}\NormalTok{(scores)}
+
+\NormalTok{scores\textless{}{-}}\KeywordTok{rbind}\NormalTok{(scores01, scores00)}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{Triple differences: Simulation}
+\protect\hypertarget{triple-differences-simulation-2}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{scores}\OperatorTok{$}\NormalTok{post\textless{}{-}}\DecValTok{0}
+\NormalTok{scores}\OperatorTok{$}\NormalTok{post[scores}\OperatorTok{$}\NormalTok{year}\OperatorTok{==}\StringTok{"2001"}\NormalTok{]\textless{}{-}}\DecValTok{1}
+
+\NormalTok{regdid3d\textless{}{-}}\KeywordTok{felm}\NormalTok{(read4}\OperatorTok{\textasciitilde{}}\NormalTok{post}\OperatorTok{+}\NormalTok{treat}\OperatorTok{+}\NormalTok{post}\OperatorTok{*}\NormalTok{treat}\OperatorTok{|}\DecValTok{0}\OperatorTok{|}\DecValTok{0}\OperatorTok{|}\NormalTok{class,scores)}
+
+\NormalTok{regdid3dinter\textless{}{-}}\KeywordTok{felm}\NormalTok{(read4}\OperatorTok{\textasciitilde{}}\NormalTok{post}\OperatorTok{+}\NormalTok{treat}\OperatorTok{+}\NormalTok{aftsch}
+                    \OperatorTok{+}\NormalTok{post}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{treat}\OperatorTok{*}\NormalTok{aftsch}\OperatorTok{+}\NormalTok{post}\OperatorTok{*}\NormalTok{aftsch}
+                    \OperatorTok{+}\NormalTok{post}\OperatorTok{*}\NormalTok{aftsch}\OperatorTok{*}\NormalTok{treat}
+                    \OperatorTok{|}\DecValTok{0}\OperatorTok{|}\DecValTok{0}\OperatorTok{|}\NormalTok{class,}
+\NormalTok{                    scores)}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{Triple differences: Simulation}
+\protect\hypertarget{triple-differences-simulation-3}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{stargazer}\NormalTok{( regdid3d,regdid3dinter, }\DataTypeTok{type=}\StringTok{"latex"}\NormalTok{,}\DataTypeTok{no.space=}\OtherTok{TRUE}\NormalTok{,  }\DataTypeTok{omit.stat =} \StringTok{"all"}\NormalTok{, }\DataTypeTok{header=}\OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{table}[!htbp] \centering 
+  \caption{} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}}lcc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{2}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-3} 
+\\[-1.8ex] & \multicolumn{2}{c}{read4} \\ 
+\\[-1.8ex] & (1) & (2)\\ 
+\hline \\[-1.8ex] 
+ post & 4.868$^{***}$ & 7.850$^{***}$ \\ 
+  & (1.197) & (1.907) \\ 
+  treat & 15.815$^{***}$ & 14.287$^{***}$ \\ 
+  & (3.709) & (2.639) \\ 
+  aftsch &  & 19.479$^{***}$ \\ 
+  &  & (1.764) \\ 
+  post:treat & 4.640$^{**}$ & 11.045$^{***}$ \\ 
+  & (2.071) & (2.323) \\ 
+  treat:aftsch &  & $-$0.585 \\ 
+  &  & (2.469) \\ 
+  post:aftsch &  & $-$8.220$^{***}$ \\ 
+  &  & (2.609) \\ 
+  post:treat:aftsch &  & $-$9.339$^{***}$ \\ 
+  &  & (3.129) \\ 
+  Constant & 80.400$^{***}$ & 71.851$^{***}$ \\ 
+  & (3.353) & (2.446) \\ 
+ \hline \\[-1.8ex] 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table}
+\end{frame}
+
+\begin{frame}{Triple differences: Simulation}
+\protect\hypertarget{triple-differences-simulation-4}{}
+The simple DID specification underestimates of the true treatment
+effect.\textbf{Why?}
+
+\begin{itemize}
+\item
+  the coefficient gives the \textbf{ATE} on the treated classes in the
+  post period. Since 50\% of students were already treated through the
+  after school program the ATE is halved.
+\item
+  Recall: the average treatment effect can hide vast differences in
+  treatment effects across groups.
+\item
+  To reveal these, we need to add additional interaction terms.
+\end{itemize}
+
+With the triple difference specification:
+
+\begin{itemize}
+\item
+  \(E[\hat{\alpha}_4]=\tau=10\),
+\item
+  and \(E[\hat{\alpha}_7]=-\tau=-10\) (since the ``new'' treatment does
+  not affect the after school participants).
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Triple differences: As Robustness test}
+\protect\hypertarget{triple-differences-as-robustness-test}{}
+The triple difference shows that the jump in test scores in 2001 is
+driven by students who just gained access to the book club.
+
+Students \textbf{in the same classes}, whose access to the book club did
+not change, did not experience this jump in scores.
+
+Their performance continues to parallel that of the control group.
+
+This is convincing because
+
+\begin{itemize}
+\item
+  it provides support for the parallel trends assumption and
+\item
+  it helps rule out that something else changed in the classes that
+  select into treatment that could explain the shift in scores.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Generalized DID: Staggered events}
+\protect\hypertarget{generalized-did-staggered-events}{}
+Sometimes we have a ``pure control'' that never gets treated and can
+serve as a counterfactual to treatment.
+
+Other times we do not have a true control, but a treatment is rolled out
+over a number of months/years across various treatment units.
+
+Researchers have used the staggered nature of the roll out to identify
+the causal effects.
+\end{frame}
+
+\begin{frame}{Generalized DID: Staggered events}
+\protect\hypertarget{generalized-did-staggered-events-1}{}
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth,height=\textheight]{"C:/Users/Claire/Dropbox/MQE_CI_Fall2020/Lecture Notes/PanelRollout.png"}
+\caption{Staggered roll out}
+\end{figure}
+
+Unit 1 is treated at time 3, unit 2 at time 5, unit 3 at time 7, etc.
+
+Untreated units at time \(t\) serve as the control group for the units
+that are being treated at time \(t\).
+\end{frame}
+
+\begin{frame}{Generalized DID: Staggered events}
+\protect\hypertarget{generalized-did-staggered-events-2}{}
+In a regression framework, we would estimate a two-way FE DID,
+
+\[
+y_{it}=\beta_0+\beta D_{it}+\gamma_i+\phi_t+u_{it}
+\]
+
+The key assumption:
+
+\begin{itemize}
+\item
+  changes in the control group are a good counterfactual for the change
+  in the treatment group
+\item
+  test these assumptions are very similar to the methods we have already
+  discussed.
+\end{itemize}
+
+The main difference:
+
+\begin{itemize}
+\item
+  treatment does not happen at a fixed point in time.
+\item
+  often need to generate a new set of ``relative to event time''
+  indicators that are centered around the treatment time of a particular
+  unit.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Staggered events: WARNING}
+\protect\hypertarget{staggered-events-warning}{}
+Our understanding of staggered event DID estimations is evolving.
+
+Several recent new papers reassessing these estimation strategies:
+
+\begin{itemize}
+\tightlist
+\item
+  Goodman-Bacon (2018, 2019):
+
+  \begin{itemize}
+  \item
+    This ``general'' DD estimator is a weighted average of all possible
+    two-group/two-period DD estimators in the data: treated units act as
+    both controls and treatment depending on the situation
+  \item
+    How the weighting is done is not clearly theoretically justified
+  \item
+    Estimates are potentially biased when effects change over time.
+  \end{itemize}
+\end{itemize}
+
+Exercise caution when using this type of approach as our understanding
+of these estimators, and how to correct for their problems is rapidly
+evolving.
 \end{frame}
 
 \end{document}
