--- a/Module_3_IV/Lecture_Notes_Markdown_IV.Rmd
+++ b/Module_3_IV/Lecture_Notes_Markdown_IV.Rmd
@@ -476,64 +476,58 @@ For a variety of reasons, medical trials are a fantastic example of an applicati
 The model for a medical trial is the same simple regression model that we are accustomed to:
 
 $$
-y_i=\beta_0+\beta_1 d_i+\epsilon_i.
+Y_i=\alpha+\tau D_i+\epsilon_i.
 $$
-In this case, $y_i$ represents a medical outcome, which could either be a continuous variable such as blood pressure or a discreet variable such as survival. The variable $d_i$ is generally a dummy variable that is 1 if you receive the treatment and 0 if you do not. The error term, $\epsilon_i$ represents all other factors that affect the health outcome. Note that this regression model corresponds to the potential outcome model with constant treatment effects
+In this case, $Y_i$ represents a medical outcome, which could either be a continuous variable such as blood pressure, joint pain or a discreet variable such as survival. The variable $D_i$ is generally a dummy variable that is 1 if you receive the treatment and 0 if you do not. The error term, $\epsilon_i$ represents all other factors that affect the health outcome. Note that this regression model corresponds to the potential outcome model with constant treatment effects
 
 $$
 \begin{aligned}
-y&=dy_1+(1-d)y_0\\
-y_0&=\beta_0+\epsilon\\
-y_1&=y_0+\beta_1.
+Y_i(D_i)&=D_iY(1)+(1-D_i)Y(0)\\
+Y_i(0)&=\alpha+\epsilon_i\\
+Y_i(1)&=Y_i(0)+\tau.
 \end{aligned}
 $$
 
-Let $y_i$ be blood pressure and $d_i$ represent a pill that is designed to lower blood pressure, such that $d_i=1$ if individual $i$ takes the pill and $d_i=0$ if individual $i$ does not take the pill. Our goal is to estimate the effect that the pill has on lowering blood pressure-our hope is that $\beta_1$ is large and negative. 
+Let $Y_i$ be knee pain and $D_i$ represent a theraputic stretching excercise that is designed to decrease knee pain, such that $D_i=1$ if individual $i$ does the stretching excercises and $D_i=0$ if individual $i$ does not. Our goal is to estimate the effect that the stretching excercises have on lowering knee pain-our hope is that $\tau$ is large and negative. 
 
-One way to estimate the effect is to start selling the drug to the general population and then collect some data and run a regression of blood pressure on whether or not you take the pill. However, this estimate will clearly suffer from a selection issue- people who take the pill are the ones who have high blood pressure to begin with! We will likely get a positive estimate of $\beta_1$ from this procedure, even if the true $\beta_1$ is large and negative. This may be true even if we condition on observable covariates. Therefore in order to accurately estimate $\beta_1$, we design a medical trial in which we randomly assign some patients to the treatment group and others to the control group. The patients in the treatment group are given the pill and told to take it, while the patients in the control group are given a placebo (or nothing at all).   
+One way to estimate the effect is to start selling promoting the excercises to the general population and then collect some data and run a regression of knee pain on whether or not you do the stretching excercises. However, this estimate will clearly suffer from a selection issue- people who do the stretching excercises are the ones who have knee pain to begin with! We will likely get a positive estimate of $\tau$ from this procedure, even if the true $\tau$ is large and negative. This may be true even if we condition on observable covariates. Therefore in order to accurately estimate $\tau$, we design a medical trial in which we randomly assign some patients to the treatment group and others to the control group. The patients in the treatment group are instructed on the stretching excercises and told to do them regularly, while the patients in the control group are not.   
 
-Back in the old days, people estimated the effect of the drug by simply subtracting the mean of $y_i$ for the control group from the mean of $y_i$ for the treatment group (which is the equivalent to regressing $y_i$ on a variable that is 1 if you are assigned to the treatment groups and 0 if you are in the control group). This is what is known as an **intention to treat** (or ITT) analysis, because you are taking the difference between the group that you intended to treat and the group that you do not intend to treat. But there was the problem of **non-compliance**- some people in the treatment group would fail to take the pill and others in the control group would obtain the pill from another source, even though they were not supposed to. This non-compliance can cause bias in the estimate of $\beta_1$ and it was not immediately clear how to fix this bias until it became obvious that what we were looking at was actually a simple IV problem. 
+Back in the old days, people estimated the effect of a therapy by simply subtracting the mean of $Y_i$ for the control group from the mean of $Y_i$ for the treatment group (which is the equivalent to regressing $Y_i$ on a variable that is 1 if you are assigned to the treatment groups and 0 if you are in the control group). This is what is known as an **intention to treat** (or ITT) analysis, because you are taking the difference between the group that you intended to treat and the group that you do not intend to treat. But there was the problem of **non-compliance**- some people in the treatment group would fail to do the stretching excercises and others in the control group would get instruction on how to do the stretching excercises from another source, even though they were not supposed to. This non-compliance can cause bias in the estimate of $\tau$ and it was not immediately clear how to fix this bias until it became obvious that what we were looking at was actually a simple IV problem. 
 
-In this case, the instrument, $z_i$ is the intention to treat, ie $z_i=1$ if you are assigned to the treatment group (we intend to treat you), and $z_i=0$ if you are assigned to the control group (we do not intend to treat you). It is easy to see that $z_i$ satisfies the two properties of a good instrument. First, $z_i$ is randomly assigned so by construction will be uncorrelated with $\nu_i$ so $cov(z_i,\nu_i)=0$. Second, $z_i$ is correlated with $d_i$, because you are going to be more likely to take the pill if you are in the treatment group so $cov(z_i,d_i)\neq0$. Therefore, $z_i$ is a valid instrument for $d_i$ and the IV estimator gives us a consistent estimate of $\beta_1$, the effect of taking the pill on blood pressure. 
+In this case, the instrument, $Z_i$ is the intention to treat, ie $Z_i=1$ if you are assigned to the treatment group (we intend to treat you), and $Z_i=0$ if you are assigned to the control group (we do not intend to treat you). It is easy to see that $z_i$ satisfies the two properties of a good instrument. First, $Z_i$ is randomly assigned so by construction will be uncorrelated with $\nu_i$ so $cov(Z_i,\nu_i)=0$. Second, $Z_i$ is correlated with $D_i$, because you are going to be more likely to do the stretches if you are in the treatment group so $cov(Z_i,D_i)\neq0$. Therefore, $Z_i$ is a valid instrument for $D_i$ and the IV estimator gives us a consistent estimate of $\tau$, the effect of taking the stretching excercises on knee pain. 
 
-How does this fix the non-compliance problem? To facilitate understanding, assume the non-compliance problem only exists for the people in the treatment group. That is to say, assume that only half the people in the treatment group take the pill (ie half of the treatment group fails to comply and does not take the pill while the other half takes the pill as they were told to). What will the IV look like?
+How does this fix the non-compliance problem? To facilitate understanding, assume the non-compliance problem only exists for the people in the treatment group. That is to say, assume that only half the people in the treatment group do the stretching excercises (ie half of the treatment group fails to comply and does not do the stretching excercises while the other half do do the stretching excercises as they were told to). What will the IV look like?
 
-The first stage will regress whether you took the pill on whether you were in the treatment group $d_i$ on $z_i$:
-
-$$
-d_i=\gamma_0+\gamma_1z_i+u_i
-$$
-Since zero people in the control group took the pill while half in the treatment group took the pill, it should be intuitive that our estimate for $E[\hat{\gamma}_0]=0$ and $E[\hat{\gamma}_1]=0.5$. 
-
-Now recall that the IV estimate is the reduced form scaled by the first stage. In this case, the reduced form is a regression of $y_i$ (your blood pressure) on $z_i$(whether you were assigned to the treatment or control group). So the reduced form is 
+The first stage will regress whether you did stretching excercises on whether you were in the treatment group $D_i$ on $Z_i$:
 
 $$
-y_i=\pi_0+\pi_1z_i+v_i
+D_i=\gamma_0+\gamma_1Z_i+u_i
 $$
-Therefore our IV estimate, $\hat{\beta}_{IV}=\frac{\hat{\pi}_1}{\hat{\gamma}_1}=\frac{\hat{\pi}_1}{0.5}$. How is this fixing the non-complier problem? Well, we know that the reduced form estimates the causal effect of the instrument on $y_i$, so in our case the reduced form is estimating the effect that being assigned to the treatment group has on blood pressure. If there were a perfect correlation between being assigned to the treatment group and taking the pill (ie everyone complies with their treatment assignment), then the reduced form estimate would be the effect of taking the pill because the first stage would give us $\hat{\gamma}_1=1$ and the IV estimate would be $\hat{\beta}_{IV}=\frac{\hat{\pi}_1}{1}=\hat{\pi}_1$.
+Since zero people in the control group did the stretching excercises while half in the treatment group did stretching excercises, it should be intuitive that our estimate for $E[\hat{\gamma}_0]=0$ and $E[\hat{\gamma}_1]=0.5$. 
 
-In our case however, the correlation is not perfect so the reduced form is estimating the effect on your blood pressure of increasing the probability that you take the pill by 50 percentage points. This means that the reduced form is not estimating the full effect of taking the pill, but rather half of the effect of taking the pill. 
+Now recall that the IV estimate is the reduced form scaled by the first stage. In this case, the reduced form is a regression of $Y_i$ (your knee pain) on $Z_i$(whether you were assigned to the treatment or control group). So the reduced form is 
 
-For example: suppose there are 10 people in the treatment group. 5 take the pill and 5 do not. Of the 10 people in the control group, no one takes the pill. The (expected) mean blood pressure for the treatment group will be $\frac{5\beta_0+5(\beta_0+\beta_1)}{10}=\beta_0+\frac{\beta_1}{2}$, while the (expected) mean blood pressure for the control group will be just $\beta_0$. So the reduced form coefficient $\hat{\pi}_1$ will be the difference of means between the treatment and control groups, or $\frac{\beta_1}{2}$. This, of course, is half the effect of taking the pill. 
+$$
+Y_i=\pi_0+\pi_1Z_i+v_i
+$$
+Therefore our IV estimate, $\hat{\tau}_{IV}=\frac{\hat{\pi}_1}{\hat{\gamma}_1}=\frac{\hat{\pi}_1}{0.5}$. How is this fixing the non-complier problem? Well, we know that the reduced form estimates the causal effect of the instrument on $Y_i$, so in our case the reduced form is estimating the effect that being assigned to the treatment group has on knee pain. If there were a perfect correlation between being assigned to the treatment group and doind the stretching excercises (ie everyone complies with their treatment assignment), then the reduced form estimate would be the effect of the stretching excercises because the first stage would give us $\hat{\gamma}_1=1$ and the IV estimate would be $\hat{\tau}_{IV}=\frac{\hat{\pi}_1}{1}=\hat{\pi}_1$.
 
-Therefore, $E[\beta_{1,IV}]=\frac{\pi_1}{\gamma_1}=\frac{0.5\beta_1}{0.5}=\beta_1$ which is exactly what we want. We can see that the IV estimate gives us a consistent estimate precisely because it is scaling the reduced form by the first stage. In this example what this means in practice is that we are re scaling the reduced form to account for the fact that being in the treatment group only increases your probability of taking the pill by 50 percentage points not by a full 100 percentage points. So the reduced form only represents half of the effect of taking the pill and it must be re-scaled by (divided by) 0.5 in order to estimate the full effect of taking the pill. 
+In our case however, the correlation is not perfect so the reduced form is estimating the effect on your knee pain of increasing the probability that you do the stretching excercises by 50 percentage points. This means that the reduced form is not estimating the full effect of the stretching excercises, but rather half of the effect of the stretching excercises. 
 
-Another important clarifying point. Note how IV is different from simply taking the mean of $y_i$ for those in the treatment group who took the pill and subtracting the mean of $y_i$ for those in the control group who did not take the pill. The estimator I just described, ie the naive estimator, is affected by the same selection issues as a simple OLS regression of $y_i$ on $d_i$. Specifically, it may be the case that the people in the treatment group who choose not to take the pill do so because their blood pressure was not very high to begin with. Thus the group of people that actually took the pill are the ones that all had high blood pressure to begin with, and we will tend to estimate that the pill does not have much of an effect. 
+For example: suppose there are 10 people in the treatment group. 5 do the stretching excercises and 5 do not. Of the 10 people in the control group, no one does the stretching excercises. The (expected) mean knee pain for the treatment group will be $\frac{5\alpha+5(\alpha+\tau)}{10}=\alpha+\frac{\tau}{2}$, while the (expected) mean knee pain for the control group will be just $\alpha$. So the reduced form coefficient $\hat{\pi}_1$ will be the difference of means between the treatment and control groups, or $\frac{\tau}{2}$. This, of course, is half the effect of the stretching excercises. 
 
-The IV estimator does not suffer from this selection problem because it does not release the people in the treatment group who choose not to take the pill. To understand this,
-imagine for the moment that there are two types of people in our sample: high blood
-pressure types and low blood pressure types. Assume that they occur with equal frequency,
+Therefore, $E[\tau_{IV}]=\frac{\pi_1}{\gamma_1}=\frac{0.5\tau}{0.5}=\tau$ which is exactly what we want. We can see that the IV estimate gives us a consistent estimate precisely because it is scaling the reduced form by the first stage. In this example what this means in practice is that we are re scaling the reduced form to account for the fact that being in the treatment group only increases your probability of doind the stretching excercises by 50 percentage points not by a full 100 percentage points. So the reduced form only represents half of the effect of the stretching excercises and it must be re-scaled by (divided by) 0.5 in order to estimate the full effect of the stretching excercises. 
+
+Another important clarifying point. Note how IV is different from simply taking the mean of $Y_i$ for those in the treatment group who did the stretching excercises and subtracting the mean of $Y_i$ for those in the control group who did not do the stretching excercises. The estimator I just described, ie the naive estimator, is affected by the same selection issues as a simple OLS regression of $Y_i$ on $D_i$. Specifically, it may be the case that the people in the treatment group who choose not to do the stretching excercises do so because their knee pain was not very severe to begin with. Thus the group of people that actually did the stretching excercises are the ones that all had severe knee pain to begin with, and we will tend to estimate that the stretching excercises does not have much of an effect. 
+
+The IV estimator does not suffer from this selection problem because it does not release the people in the treatment group who choose not to do the stretching excercises. To understand this, imagine for the moment that there are two types of people in our sample: high knee pain types and low knee pain types. Assume that they occur with equal frequency,
 so that when we randomly assign our sample to the treatment and control groups, half of the
-treatment group is high blood pressure, half of the treatment group is low blood pressure,
-half of the control group is high blood pressure, and half of the control group is low blood
-pressure. The half of the treatment group that takes the pill all have high blood pressure, so
-when we apply the naive estimator and compare their average blood pressure to the average
-blood pressure of the control group, we underestimate the effect of the pill because we are
-comparing a group of high blood pressure people (who took the pill) to a group that is a 50/50
-mix of high blood pressure and low blood pressure people (who did not take the pill). In contrast, what IV does is compare the mean of the treatment group (which is half high blood
-pressure people and half low blood pressure people) to the mean of the control group (which
-is half high blood pressure people and half low blood pressure people) in the reduced form.
-It then re scales this difference in means by the first stage to account for the fact that not all of the treated group took the pill. So unlike the naive estimator, which deceptively compares a high blood pressure group to a half-high/half-low blood pressure group, IV compares two comparable groups, and that is why it gives us a consistent estimate of the effect of the pill.
+treatment group is high knee pain, half of the treatment group is low knee pain,
+half of the control group is high knee pain, and half of the control group is low knee pain. The half of the treatment group that does the stretching excercises all have high knee pain, so
+when we apply the naive estimator and compare their average knee pain to the average
+knee pain of the control group, we underestimate the effect of the stretching excercises because we are comparing a group of high knee pain people (who did the stretching excercises) to a group that is a 50/50 mix of high knee pain and low knee pain people (who did not do the stretching excercises). In contrast, what IV does is compare the mean of the treatment group (which is half high knee pain people and half low knee pain people) to the mean of the control group (which
+is half high knee pain people and half low knee pain people) in the reduced form.
+It then re scales this difference in means by the first stage to account for the fact that not all of the treated group did the stretching excercises. So unlike the naive estimator, which deceptively compares a high knee pain group to a half-high/half-low knee pain group, IV compares two comparable groups, and that is why it gives us a consistent estimate of the effect of the stretching excercises.
 
 
 
